<resources>
    <string name="app_name">MyMoney</string>
    <string name="welcome">Welcome</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="title_slide1">Connect the charger</string>
    <string name="string_slide1">Money Lover</string>

    <string name="desc_slide1">Lên kế hoạch tài chính thông minh và từng bước tiết kiệm để hiện thực hóa ước mơ.</string>
    <string name="string_desc_slide1">Mẹo đầu tiên: đăng nhập để truy cập vào dữ liệu của bạn trên tất cả các thiết bị.</string>

    <string name="title_slide2">Kiểm soát từng khoản thu chi với hệ thống báo cáo chi tiết.</string>

    <string name="desc_slide2">It will  keep you updated on battery charging status through notification and home screen widget</string>
    <string name="title_slide3">Alert on 100%</string>
    <string name="title_slide4">Chán nản sẽ có những trò chơi giải trí cùng app…</string>
    <string name="title_slide5">Nghe nhạc mp3 cực đỉnh cùng app và được thiết kế giao diện cực đẹp.</string>
    <string name="desc_slide3">It will alert you when battery reaches 100%</string>
    <string name="btnmoney">Đã Sử Dụng MONEY LOVER</string>
    <string name="fistmoney">Lần Đầu Sử Dụng MONEY LOVER</string>
    <string name="suport">Chúng tôi sẽ không đăng thông tin mà không có sự cho phép của bạn.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="tab_text_1">Đăng Nhập</string>
    <string name="tab_text_2">Đăng Ký</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="username">Tên Đăng Nhập</string>
    <string name="password">Mật Khẩu</string>
    <string name="remember_password">Nhớ Mật Khẩu</string>
    <string name="login">Đăng Nhập</string>
    <string name="ng_nh_p">Đăng Nhập</string>
    <string name="ang_k_t_n_i_v_i_m_y_ch">Đang Kết Nối Với Máy Chủ...</string>
    <string name="ng_k_t_i_kho_n">Đăng Ký Tài Khoản</string>
    <string name="ng_k">Đăng Ký</string>
    <string name="h_v_t_n">Họ Và Tên</string>
    <string name="l_a_ch_n_h_nh_nh">Lựa Chọn Hình Ảnh</string>
    <string name="money">Tiền Vào</string>
    <string name="ho_n_th_nh">Hoàn Thành</string>
    <string-array name="list_image_avatar">
        <item>img_beatifull</item>
        <item>img_boy</item>
        <item>img_grirl</item>
        <item>img_hotboy</item>
        <item>img_men</item>
        <item>img_sexy</item>
    </string-array>
    <string-array name="list_image_flag">
        <item>img_china_flag</item>
        <item>img_flagvn</item>
        <item>img_korean_flag</item>
        <item>img_nga_flag</item>
        <item>img_thailan_flag</item>
        <item>img_uk_flag</item>
        <item>img_usa_flag</item>
    </string-array>
    <string-array name="list_name_flag">
        <item>¥</item>
        <item>₫</item>
        <item>₩</item>
        <item>руб</item>
        <item>฿</item>
        <item>£</item>
        <item>$</item>
    </string-array>
    <string-array name="list_name_avatar">
        <item>Người Đẹp</item>
        <item>Con Trai</item>
        <item>Con Gái</item>
        <item>Đẹp Trai</item>
        <item>Đàn Ông</item>
        <item>Quyến Rũ</item>
    </string-array>
    <string-array name="list_image_spend">
        <item>img_spend_item1</item>
        <item>img_spend_item2</item>
        <item>img_spend_item3</item>
        <item>img_spend_item4</item>
        <item>img_spend_item5</item>
        <item>img_spend_item6</item>
        <item>img_spend_item7</item>
        <item>img_spend_item8</item>
        <item>img_spend_item9</item>
        <item>img_spend_item10</item>
        <item>img_spend_item11</item>
        <item>img_spend_item12</item>
        <item>img_spend_item13</item>
        <item>img_spend_item14</item>
        <item>img_spend_item15</item>
        <item>img_spend_item16</item>
        <item>img_spend_item17</item>
        <item>img_spend_item18</item>
        <item>img_spend_item19</item>
        <item>img_spend_item20</item>
        <item>img_spend_item21</item>
        <item>img_spend_item22</item>
        <item>img_spend_item23</item>
        <item>img_spend_item24</item>
    </string-array>
    <string-array name="list_name_spend">
        <item>Mua Sữa</item>
        <item>Mua Bánh</item>
        <item>Mua Báo</item>
        <item>Nhậu</item>
        <item>Cafe</item>
        <item>Máy Bay</item>
        <item>Cúng Hương</item>
        <item>Nghe Nhạc</item>
        <item>Ăn Mỳ</item>
        <item>Tạp Hóa</item>
        <item>Kem</item>
        <item>Nước</item>
        <item>Quần Áo</item>
        <item>Trò Chơi</item>
        <item>Chơi Bộ</item>
        <item>Rượu</item>
        <item>Sữa</item>
        <item>Khám Răng</item>
        <item>Tạp Hóa</item>
        <item>Ăn</item>
        <item>Lúa Mạch</item>
        <item>Thuốc</item>
        <item>Đi Học</item>
    </string-array>
    <string-array name="thang">
        <item>Không có tháng</item>
        <item>Tháng Một</item>
        <item>Tháng Hai</item>
        <item>Tháng Ba</item>
        <item>Tháng Tư</item>
        <item>Tháng Năm</item>
        <item>Tháng Sáu</item>
        <item>Tháng Bảy</item>
        <item>Tháng Tám</item>
        <item>Tháng Chín</item>
        <item>Tháng Mười</item>
        <item>Tháng Mười Một</item>
        <item>Tháng Một Hai</item>
    </string-array>
    <string-array name="thu_ngay">
        <item>Chủ Nhật</item>
        <item>Thứ Hai</item>
        <item>Thứ Ba</item>
        <item>Thứ Tư</item>
        <item>Thứ Năm</item>
        <item>Thứ Sáu</item>
        <item>Thứ Bảy</item>
    </string-array>
    <string name="title_activity_spend">SpendActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="t_ng_quan">Tổng quan</string>
    <string name="ti_n_v_o">Tiền vào</string>
    <string name="_5_000_000">5,000,000</string>
    <string name="ti_n_ra">Tiền ra</string>
    <string name="_10000">10000</string>
    <string name="t_n_chi_ti_u">Tên Chi Tiêu</string>
    <string name="ti_n_chi_ti_u">Tiền Chi Tiêu</string>
    <string name="th_m_chi_ti_u">Thêm Chi Tiêu</string>
    <string name="s_a_chi_ti_u">Sửa Chi Tiêu</string>
    <string name="x_a_chi_ti_u">Xóa Chi Tiêu</string>
    <string name="title_activity_statistic_spend">StatisticSpendActivity</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="th_ng">Tháng</string>
    <string name="chuy_n_ti_n">Chuyển Tiền</string>
    <string name="title_activity_total_spend_colleted">TotalSpendColletedActivity</string>
    <string name="ti_n_thu_nhi_u_n2h_t">Tiền Thu Nhiều Nhất</string>
    <string name="thongke">Thống Kê Tiền Tiêu</string>
    <string name="ti_n_thu">Tiền Thu</string>
    <string name="th_ng_k_ti_n_thu">Thống Kê Tiền Thu</string>
    <string name="ng_xu_t">Đăng Xuất</string>
    <string name="c_c_th_ng">Các Tháng</string>
    <string name="c_c_tu_n">Các Tuần</string>
    <string name="tu_n">Tuần</string>
    <string name="ng_y">Ngày</string>
    <string name="t_k_t_t">Thống Kê Tiền Tiêu</string>
    <string name="quay_v">Quay Về</string>
    <string name="th_m_ti_n_thu">Thêm Tiền Thu</string>
    <string name="h_m_nay">Hôm Nay</string>
    <string name="tktt_1">Thống Kê Tiền Thu</string>
    <string name="t_i_kho_n_c_n_chuy_n">Tài Khoản Cần Chuyển</string>
    <string name="s_ti_n">Số Tiền</string>
    <string name="setting">Setting</string>
    <string name="c_c_ng_y">Các Ngày</string>
    <string name="dialogtitle">Chỉnh Sửa Hoặc Xóa</string>
    <string name="dialogtitle_item_1">Chọn Đồng Ý Để Tiếp Tục !</string>
    <string name="dialogdy">Đồng Ý</string>
    <string name="dialogh">Hủy</string>
    <string name="t_t">Tắt</string>
    <string name="loginfaile">Tài Khoản Sai Hoặc Mật Khẩu Sai</string>
    <string name="loginsuccess">Đăng Nhập Thành Công</string>
</resources>
