<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_statistics"
            android:icon="@android:drawable/stat_notify_error"
            android:title="@string/thongke" />
        <item
            android:id="@+id/nav_tranfers"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/chuy_n_ti_n" />
        <item
            android:id="@+id/nav_money_collected"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/ti_n_thu" />
        <item
            android:id="@+id/nav_total_collected"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/th_ng_k_ti_n_thu" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
