<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_intro"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:weightSum="4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dots_height"
            android:layout_marginBottom="@dimen/dots_bottom_margin"
            android:gravity="center"
            android:layout_weight="2.2"
            android:orientation="horizontal"
            tools:ignore="UselessLeaf" />
        <RelativeLayout
            android:id="@+id/layout_First"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.55"
            android:gravity="center">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_button_style"
                android:text="@string/btnmoney"
                android:textColor="@color/trang"
                android:textSize="@dimen/norm"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.55"
            android:gravity="center">

            <Button
                android:id="@+id/btnRegistered"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_button_style_green"
                android:text="@string/fistmoney"
                android:textColor="@color/color_slide1"
                android:textSize="@dimen/norm" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDots"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dots_height"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dots_bottom_margin"
        android:gravity="center"
        android:orientation="horizontal" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/layoutDots"
        android:alpha=".5"
        android:background="@android:color/white" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:onClick="btnNextClick"
        android:text="@string/next"
        android:textColor="@android:color/white"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@null"
        android:onClick="btnSkipClick"
        android:text="@string/skip"
        android:textColor="@android:color/white" />

</RelativeLayout>
